--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "http": "0.0.0",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
-    "pg": "^7.17.1"
+    "pg": "^7.17.1",
+    "sequelize": "^5.21.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
     "@types/morgan": "^1.7.37",
     "nodemon": "^2.0.2",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
