--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http": "0.0.0",
-    "knex": "^0.20.8",
     "morgan": "^1.9.1",
-    "pg": "^7.17.1",
-    "sequelize": "^5.21.3"
+    "pg": "^7.17.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
     "@types/morgan": "^1.7.37",
+    "@types/sequelize": "^4.28.8",
     "nodemon": "^2.0.2",
     "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.1",
