--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "start": "nodemon src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc"
   },
   "repository": {
@@ -20,8 +20,23 @@
   ],
   "author": "RafaDraw",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rafalogan/rest-api-typescript/issues"
+	"jest": {
+		"testEnvironment": "node",
+		"transform": {
+			"^.+\\.tsx?$": "ts-jest"
+		},
+		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.jsx?$",
+		"moduleFileExtensions": [
+			"ts",
+			"tsx",
+			"js",
+			"jsx",
+			"json",
+			"node"
+		]
+	},
+	"bugs": {
+		"url": "https://github.com/rafalogan/rest-api-typescript/issues"
   },
   "homepage": "https://github.com/rafalogan/rest-api-typescript#readme",
   "dependencies": {
@@ -33,13 +48,22 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/jest": "^25.1.0",
     "@types/morgan": "^1.7.37",
     "@types/sequelize": "^4.28.8",
+    "@types/supertest": "^2.0.8",
+    "codelyzer": "^5.2.1",
+    "dotenv": "^8.2.0",
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.0.0",
     "ts-node": "^8.6.2",
+    "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
 }
