--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
   ],
   "author": "RafaDraw",
   "license": "MIT",
-	"jest": {
-		"testEnvironment": "node",
-		"transform": {
-			"^.+\\.tsx?$": "ts-jest"
-		},
-		"testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.jsx?$",
-		"moduleFileExtensions": [
-			"ts",
-			"tsx",
-			"js",
-			"jsx",
-			"json",
-			"node"
-		]
-	},
-	"bugs": {
-		"url": "https://github.com/rafalogan/rest-api-typescript/issues"
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.jsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "bugs": {
+    "url": "https://github.com/rafalogan/rest-api-typescript/issues"
   },
   "homepage": "https://github.com/rafalogan/rest-api-typescript#readme",
   "dependencies": {
@@ -44,7 +44,8 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "morgan": "^1.9.1",
-    "pg": "^7.17.1"
+    "pg": "^7.17.1",
+    "sequelize": "^5.21.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
@@ -54,7 +55,6 @@
     "@types/morgan": "^1.7.37",
     "@types/sequelize": "^4.28.8",
     "@types/supertest": "^2.0.8",
-    "codelyzer": "^5.2.1",
     "dotenv": "^8.2.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
