--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
 		"types": [
 			"node"
 		],
+		"strict": true,
+		"resolveJsonModule": true,
 		"noEmitOnError": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
