--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "nodemon src/server.ts",
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+		"knex:migrate:make": "knex --knexfile src/database/knexfile.ts -x ts migrate:make",
+		"knex:migrate:latest": "knex --knexfile src/database/knexfile.ts migrate:latest",
+		"knex:migrate:rollback": "knex --knexfile src/database/knexfile.ts migrate:rollback"
   },
   "repository": {
     "type": "git",
@@ -43,22 +46,21 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http": "0.0.0",
+    "knex": "^0.20.8",
     "morgan": "^1.9.1",
-    "pg": "^7.17.1",
-    "sequelize": "^5.21.3"
+    "pg": "^7.17.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.0",
+    "@types/knex": "^0.16.1",
     "@types/morgan": "^1.7.37",
-    "@types/sequelize": "^4.28.8",
     "@types/supertest": "^2.0.8",
     "dotenv": "^8.2.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
-    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.1",
     "supertest": "^4.0.2",
     "ts-jest": "^25.0.0",
