--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "rest-api-typescript",
   "version": "1.0.0",
   "description": "Api Rest em typeScript com base no curso https://github.com/raphaellima8/typescript-course",
-  "main": "server.ts",
+  "main": "src/server.ts",
+  "private": true,
   "scripts": {
     "start": "nodemon src/server.ts",
     "test": "jest",
     "build": "tsc",
-		"knex:migrate:make": "knex --knexfile src/database/knexfile.ts -x ts migrate:make",
-		"knex:migrate:latest": "knex --knexfile src/database/knexfile.ts migrate:latest",
-		"knex:migrate:rollback": "knex --knexfile src/database/knexfile.ts migrate:rollback"
+    "knex:migrate:make": "knex --knexfile src/knexfile.ts -x ts migrate:make",
+    "knex:migrate:latest": "knex --knexfile src/knexfile.ts migrate:latest",
+    "knex:migrate:rollback": "knex --knexfile src/knexfile.ts migrate:rollback"
   },
   "repository": {
     "type": "git",
@@ -48,13 +49,13 @@
     "http": "0.0.0",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
-    "pg": "^7.17.1"
+    "pg": "^7.18.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.0",
+    "@types/jest": "^25.1.1",
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.7.37",
     "@types/supertest": "^2.0.8",
@@ -63,7 +64,7 @@
     "nodemon": "^2.0.2",
     "sucrase": "^3.12.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.0.0",
+    "ts-jest": "^25.1.0",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
