--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,10 @@
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true
-	}
+	},
+	"exclude": [
+		"node_modules",
+		"**/*.spec.ts",
+		"**/*.test.ts"
+	]
 }
