--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
 		"noEmitOnError": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"noImplicitAny": false
 	},
 	"exclude": [
 		"node_modules",
