--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "private": true,
   "scripts": {
-    "start": "nodemon src/server.ts",
+    "start": "nodemon ./build/server.js",
     "test": "jest",
     "build": "tsc",
     "knex:migrate:make": "knex --knexfile src/knexfile.ts -x ts migrate:make",
@@ -48,8 +48,11 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "http-status": "^1.4.2",
+    "jwt-simple": "^0.5.6",
     "knex": "^0.20.8",
     "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.18.1"
   },
   "devDependencies": {
@@ -57,8 +60,11 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.1",
+    "@types/jwt-simple": "^0.5.33",
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.7.37",
+    "@types/passport": "^1.0.2",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "dotenv": "^8.2.0",
     "jest": "^25.1.0",
