--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/rafalogan/rest-api-typescript#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http": "0.0.0",
@@ -56,6 +57,7 @@
     "pg": "^7.18.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
@@ -69,7 +71,6 @@
     "dotenv": "^8.2.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
-    "sucrase": "^3.12.1",
     "supertest": "^4.0.2",
     "ts-jest": "^25.2.0",
     "ts-node": "^8.6.2",
