--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon ./build/server.js",
     "test": "jest",
     "build": "tsc",
+		"dev": "tsc -w",
     "knex:migrate:make": "knex --knexfile src/knexfile.ts -x ts migrate:make",
     "knex:migrate:latest": "knex --knexfile src/knexfile.ts migrate:latest",
     "knex:migrate:rollback": "knex --knexfile src/knexfile.ts migrate:rollback"
