--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "private": true,
   "scripts": {
-    "start": "nodemon ./build/server.js",
+    "start": "nodemon ./dist/server.js",
     "test": "jest",
     "build": "tsc",
     "dev": "tsc -w",
